FISH-8998: disable Java security manager in order to be able to run Soap-TCK